k8s/frontent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontent
  namespace: chat-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
